--- a/assets/globals.sass
+++ b/assets/globals.sass
@@ -3,14 +3,14 @@
   font-style: normal
   font-weight: 400
   font-display: swaps
-  src: url('~assets/fonts/Ribosoma/Ribosoma-Roman.otf') format('opentype')
+  src: url('static/fonts/Ribosoma/Ribosoma-Roman.otf') format('opentype')
 
 @font-face
   font-family: 'Ribosoma Antislanted'
   font-style: antislanted
   font-weight: 400
   font-display: swap
-  src: url('~assets/fonts/Ribosoma/Ribosoma-Antislanted.otf') format('opentype')
+  src: url('static/fonts/Ribosoma/Ribosoma-Antislanted.otf') format('opentype')
 
 
 @font-face
@@ -18,4 +18,4 @@
   font-style: slanted
   font-weight: 400
   font-display: swap
-  src: url('~assets/fonts/Ribosoma/Ribosoma-Slanted.otf') format('opentype')
+  src: url('static/fonts/Ribosoma/Ribosoma-Slanted.otf') format('opentype')
