--- a/assets/globals.sass
+++ b/assets/globals.sass
@@ -19,3 +19,7 @@
   font-weight: 400
   font-display: swap
   src: url('static/fonts/Ribosoma/Ribosoma-Slanted.otf') format('opentype')
+
+
+$font-color: #414040
+$menu-color: #707070
